250831 - 수정완료 알림창 진행중